# WingTip-Static-Site-Generator

./: .gitignore  404.md  README.md  RELEASING.md  audit_a11y.js  audit_site.py  build_all_versions.py  config.json  config.sample.json  generate_card.py  killDocs.sh  latex_extension.py  light-syntax.css  main.py  pyproject.toml  requirements.txt  serve.py  template.html  theme.json
.github/ISSUE_TEMPLATE/: migration.yml
.github/workflows/: fixture.yml  publish.yml  static.yml
docs/: admonitions.md  changelog.md  configuration.md  external-links.md  live-reload.md  math-examples.md  migration.md  plugins.md  quickstart.md  roadmap.md  search-features.md  theming.md  versioning.md
plugins/: sample_banner_plugin.py
static/css/: admonitions.css  custom.css
static/js/: search.js
wingtip/: .gitignore  README.md  config.json  generate_card.py  killDocs.sh  main.py  migrate.py  serve.py  template.html
wingtip/docs/: changelog.md  configuration.md  live-reload.md  quickstart.md  roadmap.md
wingtip/static/css/: admonitions.css  custom.css
wingtip/static/js/: search.js
