[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wingtip"
version = "0.1.0"
description = "A minimal static site generator for documentation"
authors = [
  { name="SemanticEntity", email="user@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "markdown",
  "beautifulsoup4",
  "livereload",
  "pillow",
  "PyYAML",
  "Pygments"
]

[project.scripts]
wingtip = "wingtip.main:main"
